ha, messed everything up on last commit but deleting a closing div on accident. fixed it.

--- a/public/index.html
+++ b/public/index.html
@@ -88,8 +88,7 @@
           This is a modified jumbotron that occupies the entire horizontal space
           of its parent.
         </p>
-
-        
+      </div>
     </div>
 
     <!--HEADING PARAGRAPH -->
