moved nav inside of jumbotron image, took away background.

--- a/public/index.html
+++ b/public/index.html
@@ -40,48 +40,47 @@
     <!--NAVBAR -->
     <!-- Want to make this a sticky nav that is transparent until scroll and then like a black color with some level of opacity -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
-      <a class="navbar-brand" href="#">Logo</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarText"
-        aria-controls="navbarText"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#"
-              >Home <span class="sr-only">(current)</span></a
-            >
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Carriers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Shippers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Owner Operators</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-        </ul>
-        <span class="navbar-text"> </span>
-      </div>
-    </nav>
-
     <!--HEADER IMAGE WITH TEXT -->
     <!-- Need to find a good image maybe of savannah port or even our new facility -->
     <!-- Move text to the left of page on image, with maybe a button to get signed up as a carrier -->
 
     <div class="jumbotron jumbotron-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-none">
+        <a class="navbar-brand" href="#">Logo</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarText"
+          aria-controls="navbarText"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#"
+                >Home <span class="sr-only">(current)</span></a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Carriers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Shippers</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Owner Operators</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+          </ul>
+          <span class="navbar-text"> </span>
+        </div>
+      </nav>
       <div class="container">
         <h1 class="display-4">Supply Chain Management</h1>
         <p>
