testing video background instead of image for homepage. created other pages and linked to nav. Need to polish up components to recycle on other pages with differnt displays.

--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,51 @@
     <!-- Need to find a good image maybe of savannah port or even our new facility -->
     <!-- Move text to the left of page on image, with maybe a button to get signed up as a carrier -->
 
+    <!-- this is a video background option -->
+    <!-- <div class="jumbotron jumbotron-fluid">
+      <video
+        autoplay
+        muted
+        loop
+        poster="https://dummyimage.com/900x400/000/fff"
+      >
+        <source
+          src="./assets/images/spiderVid.mp4"
+          data-src=""
+          type="video/mp4"
+        />
+        <source
+          src="./assets/images/spiderVid.mp4"
+          data-src=""
+          type="video/webm"
+        />
+        <source
+          src="./assets/images/spiderVid.mp4"
+          data-src=""
+          type="video/ogg"
+        />
+      </video>
+
+      <div class="container text-white">
+        <h1 class="display-4">Hello, world!</h1>
+        <p class="lead">
+          This is a simple hero unit, a simple jumbotron-style component for
+          calling extra attention to featured content or information.
+        </p>
+        <hr class="my-4" />
+        <p>
+          It uses utility classes for typography and spacing to space content
+          out within the larger container.
+        </p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+      </div>
+      <!-- /.container -->
+    </div> -->
+    <!-- /.jumbotron -->
+    <!-- this is an image background option -->
     <div class="jumbotron jumbotron-fluid">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-none">
-        <a class="navbar-brand" href="#">Logo</a>
+      <nav class="navbar navbar-expand-lg navbar-secondary bg-none">
+        <a class="navbar-brand" href="#"></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -58,31 +100,33 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
+        <div class="collapse navbar-collapse " id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#"
+              <a class="nav-link" href="./index.html"
                 >Home <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Carriers</a>
+              <a class="nav-link" href="./carriers.html">Carriers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shippers</a>
+              <a class="nav-link" href="./shippers.html">Shippers</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Owner Operators</a>
+              <a class="nav-link" href="./ownerOperators.html"
+                >Owner Operators</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="./about.html ">About</a>
             </li>
           </ul>
           <span class="navbar-text"> </span>
         </div>
       </nav>
-      <div class="container">
-        <h1 class="display-4">Supply Chain Management</h1>
+      <div class="container" id="heading1">
+        <h1 class="display">Supply Chain Management</h1>
         <p>
           This is a modified jumbotron that occupies the entire horizontal space
           of its parent.
@@ -110,7 +154,7 @@
       <div class="card-deck">
         <div class="card">
           <img
-            src="https://www.placecage.com/c/150/150"
+            src="https://www.placecage.com/c/150/100"
             class="card-img-top"
             alt="placeholder"
           />
@@ -127,7 +171,7 @@
 
         <div class="card">
           <img
-            src="https://www.fillmurray.com/g/150/150"
+            src="https://www.fillmurray.com/g/150/100"
             class="card-img-top"
             alt="placeholder"
           />
@@ -143,7 +187,7 @@
         </div>
         <div class="card">
           <img
-            src="https://www.placecage.com/150/150 "
+            src="https://www.placecage.com/150/100 "
             class="card-img-top"
             alt="placeholder"
           />
