--- a/public/ownerOperators.html
+++ b/public/ownerOperators.html
@@ -10,7 +10,11 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/css/ownerOperators.css"
+    />
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -107,62 +111,6 @@
       </h3>
     </div>
 
-    <!--DESCRIPTION OF SERVICES CARDS -->
-
-    <div class="container">
-      <div class="card-deck">
-        <div class="card">
-          <img
-            src="https://www.placecage.com/c/150/150"
-            class="card-img-top"
-            alt="placeholder"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
-            </p>
-          </div>
-        </div>
-
-        <div class="card">
-          <img
-            src="https://www.fillmurray.com/g/150/150"
-            class="card-img-top"
-            alt="placeholder"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="https://www.placecage.com/150/150 "
-            class="card-img-top"
-            alt="placeholder"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
     <!--Some Other Content  - Maybe some stats or some shit? -->
 
     <div class="container" id="logistics-solutions">
@@ -197,8 +145,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="row d-flex justify-content-center">
         <div class="col-md-4">
           <div class="card">
             <img
@@ -214,19 +160,43 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="card">
-            <img
-              class="logistics-icon"
-              src="./assets/images/collaboration.png"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Title</h5>
-              <p class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard
-              </p>
-            </div>
+      </div>
+    </div>
+    <!--DESCRIPTION OF SERVICES CARDS -->
+
+    <div class="container">
+      <div class="card-deck">
+        <!--  <div class="card">
+          <img
+            src="https://www.placecage.com/c/150/150"
+            class="card-img-top"
+            alt="placeholder"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Title</h5>
+            <p class="card-text">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
+          </div>
+        </div> -->
+
+        <div class="card">
+          <img
+            src="https://www.fillmurray.com/g/150/150"
+            class="card-img-top"
+            alt="placeholder"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Title</h5>
+            <p class="card-text">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type and scrambled it to make a type specimen book.
+            </p>
           </div>
         </div>
       </div>
