--- a/public/ownerOperators.html
+++ b/public/ownerOperators.html
@@ -188,6 +188,7 @@
             src="https://www.fillmurray.com/g/150/150"
             class="card-img-top"
             alt="placeholder"
+            id="driver-pic"
           />
           <div class="card-body">
             <h5 class="card-title">Title</h5>
