--- a/public/index.html
+++ b/public/index.html
@@ -309,28 +309,42 @@
           </div>
           <div class="modal-body">
             <form>
+              <div class="row">
+                <div class="col">
+                  <div class="form-group">
+                    <label for="exampleFormControlInput1">First Name</label>
+                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Bob">
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="form-group">
+                    <label for="exampleFormControlInput1">Last Name</label>
+                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Ross">
+                  </div>
+                </div>
+
+              </div>
               <div class="form-group">
                 <label for="exampleFormControlInput1">Email address</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
               </div>
               <div class="form-group">
-                <label for="exampleFormControlSelect1">Example select</label>
+                <label for="exampleFormControlSelect1">I am Looking to</label>
                 <select class="form-control" id="exampleFormControlSelect1">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
+                  <option>Ship some shit</option>
+                  <option>Become a Carrier Partner</option>
+                  <option>Lease on with SCMI</option>
+                  <option>Some other shit</option>
+                 
                 </select>
               </div>
               <div class="form-group">
-                <label for="exampleFormControlSelect2">Example multiple select</label>
+                <label for="exampleFormControlSelect2">I want to</label>
                 <select multiple class="form-control" id="exampleFormControlSelect2">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                  <option>5</option>
+                  <option>Ship some shit</option>
+                  <option>Become a Carrier Partner</option>
+                  <option>Lease on with SCMI</option>
+                  <option>Some other shit</option>
                 </select>
               </div>
               <div class="form-group">
