--- a/public/ownerOperators.html
+++ b/public/ownerOperators.html
@@ -182,24 +182,25 @@
             </p>
           </div>
         </div> -->
-
-        <div class="card">
-          <img
-            src="https://www.fillmurray.com/g/150/150"
-            class="card-img-top"
-            alt="placeholder"
-            id="driver-pic"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
-            </p>
+        <div class="container" id="ownerOperator-description">
+          <div class="card">
+            <img
+              src="https://www.fillmurray.com/g/150/150"
+              class="card-img-top"
+              alt="placeholder"
+              id="driver-pic"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Title</h5>
+              <p class="card-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry. Lorem Ipsum has been the industry's standard dummy
+                text ever since the 1500s, when an unknown printer took a galley
+                of type and scrambled it to make a type specimen book.
+              </p>
+            </div>
           </div>
-        </div>
+        
       </div>
     </div>
 
