--- a/public/index.html
+++ b/public/index.html
@@ -1,368 +1,34 @@
 <!DOCTYPE html>
+
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Supply Chain Management</title>
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" type="text/css" href="./assets/css/styles.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/6.6.1/firebase-app.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/6.6.1/firebase-auth.js"></script>
-    <script defer src="/__/firebase/6.6.1/firebase-database.js"></script>
-    <script defer src="/__/firebase/6.6.1/firebase-messaging.js"></script>
-    <script defer src="/__/firebase/6.6.1/firebase-storage.js"></script>
-    <!-- initialize the SDK after all desired features are loaded -->
-    <script defer src="/__/firebase/init.js"></script>
-  </head>
-  <body>
-    <!--NAVBAR -->
-    <!-- Want to make this a sticky nav that is transparent until scroll and then like a black color with some level of opacity -->
+<head>
+    <meta charset=utf-8 />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SCM</title>
 
-    <!--HEADER IMAGE WITH TEXT -->
-    <!-- Need to find a good image maybe of savannah port or even our new facility -->
-    <!-- Move text to the left of page on image, with maybe a button to get signed up as a carrier -->
+    <link rel="stylesheet" href="main.css">
 
-    <!-- this is a video background option -->
-    <!-- <div class="jumbotron jumbotron-fluid">
-      <video
-        autoplay
-        muted
-        loop
-        poster="https://dummyimage.com/900x400/000/fff"
-      >
-        <source
-          src="./assets/images/spiderVid.mp4"
-          data-src=""
-          type="video/mp4"
-        />
-        <source
-          src="./assets/images/spiderVid.mp4"
-          data-src=""
-          type="video/webm"
-        />
-        <source
-          src="./assets/images/spiderVid.mp4"
-          data-src=""
-          type="video/ogg"
-        />
-      </video>
+</head>
 
-      <div class="container text-white">
-        <h1 class="display-4">Hello, world!</h1>
-        <p class="lead">
-          This is a simple hero unit, a simple jumbotron-style component for
-          calling extra attention to featured content or information.
-        </p>
-        <hr class="my-4" />
-        <p>
-          It uses utility classes for typography and spacing to space content
-          out within the larger container.
-        </p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-      </div>
-      <!-- /.container -->
-    </div> 
-    <!-- /.jumbotron -->
-    <!-- this is an image background option -->
-    <div class="jumbotron jumbotron-fluid">
-      <nav class="navbar navbar-expand-lg navbar-secondary bg-none">
-        <a class="navbar-brand" href="#"></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarText"
-          aria-controls="navbarText"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse " id="navbarText">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="./index.html"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./carriers.html">Carriers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./shippers.html">Shippers</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./ownerOperators.html"
-                >Owner Operators</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html ">About</a>
-            </li>
-          </ul>
-          <span class="navbar-text"> </span>
-        </div>
-      </nav>
-      <div class="container" id="heading1">
-        <h1 class="display">Supply Chain Management</h1>
-        <p>
-          This is a modified jumbotron that occupies the entire horizontal space
-          of its parent.
-        </p>
-      </div>
-    </div>
+<body>
 
-    <!--HEADING PARAGRAPH -->
-    <!-- Padding to top and bottom -->
 
-    <div class="container" id="supplyChain">
-      <h3>
-        SCM - Supply Chain Management. Our identity is rooted in the process of
-        efficiently and cost-effectively planning, implementing and controlling
-        the operations of a supply chain. With industry leading carrier payment
-        terms and a proven track record of delivering consistent freight to its
-        carrier partners, SCM has developed one of the top carrier networks in
-        the industry.
-      </h3>
-    </div>
+                    <!-- Button that handles sign-in/sign-out -->
+                    <button id="sign-in-button">
+                        Sign in
+                    </button>
 
-    <!--DESCRIPTION OF SERVICES CARDS -->
 
-    <div class="container">
-      <div class="card-deck">
-        <div class="card">
-          <img
-            src="https://www.placecage.com/c/150/100"
-            class="card-img-top"
-            alt="placeholder"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
-            </p>
-          </div>
-        </div>
+<!-- Import and configure the Firebase SDK -->
+<!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+<!-- If you do not serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+<script src="/__/firebase/6.5.0/firebase-app.js"></script>
+<script src="/__/firebase/6.5.0/firebase-auth.js"></script>
+<script src="/__/firebase/init.js"></script>
 
-        <div class="card">
-          <img
-            src="https://www.fillmurray.com/g/150/100"
-            class="card-img-top"
-            alt="placeholder"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
-            </p>
-          </div>
-        </div>
-        <div class="card">
-          <img
-            src="https://www.placecage.com/150/100 "
-            class="card-img-top"
-            alt="placeholder"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Title</h5>
-            <p class="card-text">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type and scrambled it to make a type specimen book.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
+<!--sign-in script for google auth-->
+<script src="scripts/sign-in.js"></script>
 
-    <!--Some Other Content  - Maybe some stats or some shit? -->
 
-    <div class="container" id="logistics-solutions">
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-4">
-          <div class="card">
-            <img
-              class="logistics-icon"
-              src="./assets/images/collaboration.png"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Title</h5>
-              <p class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <img
-              class="logistics-icon"
-              src="./assets/images/collaboration.png"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Title</h5>
-              <p class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row d-flex justify-content-center">
-        <div class="col-md-4">
-          <div class="card">
-            <img
-              class="logistics-icon"
-              src="./assets/images/collaboration.png"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Title</h5>
-              <p class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card">
-            <img
-              class="logistics-icon"
-              src="./assets/images/collaboration.png"
-            />
-            <div class="card-body">
-              <h5 class="card-title">Title</h5>
-              <p class="card-text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting
-                industry. Lorem Ipsum has been the industry's standard
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Some message about getting started or finding a solution -->
-
-    <div class="container" id="get-started">
-      <h3>
-        Get started finding your logsitics solution today.
-      </h3>
-      <h6>
-        Dont waste any time, bitch.Get started finding your logsitics solution
-        today. Dont waste any time, bitch.
-      </h6>
-
-      <button
-        type="button"
-        class="btn btn-outline-danger"
-        id="getStarted-button"
-        data-toggle="modal" 
-        data-target="#exampleModal"
-      >
-        Do It Now
-      </button>
-    </div>
-
-    <!-- Pop up modal to get started -->
-   
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-      aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <form>
-              <div class="row">
-                <div class="col">
-                  <div class="form-group">
-                    <label for="exampleFormControlInput1">First Name</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Bob">
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="form-group">
-                    <label for="exampleFormControlInput1">Last Name</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Ross">
-                  </div>
-                </div>
-
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">I am Looking to</label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                  <option>Ship some shit</option>
-                  <option>Become a Carrier Partner</option>
-                  <option>Lease on with SCMI</option>
-                  <option>Some other shit</option>
-                 
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect2">I want to</label>
-                <select multiple class="form-control" id="exampleFormControlSelect2">
-                  <option>Ship some shit</option>
-                  <option>Become a Carrier Partner</option>
-                  <option>Lease on with SCMI</option>
-                  <option>Some other shit</option>
-                </select>
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Submit</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Footer -->
-    <footer class="bg-secondary text-white">@jtmcDesigns</footer>
-    <script src="./assets/javascript/app.js"></script>
-  </body>
+</body>
 </html>
